force-app/main/default/objects/zoom_Metadata__mdt/zoom_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Zoom</label>
    <pluralLabel>Zoom</pluralLabel>
</CustomObject>