force-app/main/default/objects/zoom_Metadata__mdt/fields/auth_url__c.field-meta.xml
<CustomField>
    <fullName>auth_url__c</fullName>
    <defaultValue>&quot;https://appcenter.intuit.com/connect/oauth2&quot;</defaultValue>
    <label>auth url</label>
    <type>Url</type>
</CustomField>