force-app/main/default/objects/zoom_Metadata__mdt/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <inlineHelpText>The field will have the value for the VF page where we wanted to redirect our application after authentication.</inlineHelpText>
    <label>PageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>