force-app/main/default/objects/zoom_Metadata__mdt/fields/Sanbdox_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Sanbdox_Base_URL__c</fullName>
    <defaultValue>&quot;https://sandbox-quickbooks.api.intuit.com&quot;</defaultValue>
    <label>Sanbdox Base URL</label>
    <type>Url</type>
</CustomField>